Fixed issue with victoryPic alignment Added align-self: center to victoryPic class to fix alignment Got documentquery of category class to insert victoryPic before

--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ h1 {
 
 
 .victoryPic {
+    align-self: center;
     width: 250px;
     margin-bottom: 80px;
 }
